// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexBoxGrid renders built-in tags 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className=""
    style={undefined}
  >
    <div />
  </div>
  <div
    className=""
    style={undefined}
  >
    <div />
  </div>
</div>
`;

exports[`FlexBoxGrid renders cell without elements 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className=""
    style={undefined}
  />
</div>
`;

exports[`FlexBoxGrid renders overallStyle 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className=""
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <div />
  </div>
  <div
    className=""
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`FlexBoxGrid renders overallStyleNames 1`] = `
<div
  className="test1 test2"
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    className="test1 test2"
    style={undefined}
  >
    <div />
  </div>
  <div
    className="test1 test2"
    style={undefined}
  >
    <div />
  </div>
</div>
`;

exports[`FlexBoxGrid renders subgrid 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className=""
    style={undefined}
  >
    <p>
      User Tag 1
    </p>
  </div>
  <div
    className=""
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className=""
        style={undefined}
      >
        <p>
          User Tag 2
        </p>
      </div>
      <div
        className=""
        style={undefined}
      >
        <p>
          User Tag 3
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FlexBoxGrid renders user tags 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className=""
    style={undefined}
  >
    <p>
      User Tag 1
    </p>
  </div>
  <div
    className=""
    style={undefined}
  >
    <p>
      User Tag 2
    </p>
  </div>
</div>
`;

exports[`FlexBoxGrid renders without cells 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
/>
`;
